<resources>
    <string name="app_name">BLE-AG-TEST</string>
    <string name="start_scan">Start Scan</string>
    <string name="scanning">Scanning</string>
    <string name="device_name">Device Name</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_info">Device Info</string>
    <string name="status">Status</string>
    <string name="record_id">Record Id</string>
    <string name="remaining_count">Remaining Count</string>
    <string name="chip_id">Chip Id</string>
    <string name="timestamp">Timestamp</string>
    <string name="duration">Duration</string>
    <string name="oil_counter">Oil Counter</string>
</resources>
