<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scan"
        android:layout_margin="20dp"
        android:onClick="onScanButtonClicked"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deviceRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scanButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#333333"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/deviceRecycler"/>

    <TextView
        android:id="@+id/deviceInfoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_info"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/deviceRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/deviceInfoNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/deviceInfoHeader"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/deviceInfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/deviceInfoNameLabel"
        app:layout_constraintTop_toTopOf="@id/deviceInfoNameLabel"/>

    <TextView
        android:id="@+id/deviceInfoStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@id/deviceInfoNameLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/deviceInfoStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/deviceInfoStatusLabel"
        app:layout_constraintTop_toTopOf="@id/deviceInfoStatusLabel"/>

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:layout_margin="20dp"
        android:onClick="onDisconnectClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceInfoStatusLabel"/>

</androidx.constraintlayout.widget.ConstraintLayout>